Still Work in Progress

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -78,7 +78,7 @@
 
 .vapt-feature-table th,
 .vapt-feature-table td {
-    padding: 10px;
+    padding: 6px 10px;
     border: 1px solid #ddd;
     text-align: left;
 }
