Before adopting a new JSON file Structure T:\~\Local925 Sites\hermasnet\app\public\wp-content\plugins\VAPTBuilder\data\VAPT-Complete-Risk-Catalog-99.json

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -119,7 +119,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
-    display: none;
+    /* display: none;  Removed to allow React to control visibility */
 }
 
 .vapt-modal-content {
